--- a/src/main/resources/templates/tasks.html
+++ b/src/main/resources/templates/tasks.html
@@ -7,9 +7,21 @@
 <body>
     <h1>To do List</h1>
     <div>
+        <form action="/" method="post">
+            <div>
+                <input type="text" name="title" placeholder="Add a new task.." required/>
+            </div>
+            <div>
+                <input type="text" name="description" placeholder="Add description.." required/>
+            </div>
+            <div>
+                <button type="submit">Add</button>
+            </div>
+        </form>
+
         <th:block th:each="task : ${tasks}">
             <div>
-                <span>Task Title</span>
+                <span th:text="${task.title}"></span>
             </div>
         </th:block>
     </div>
