--- a/src/main/resources/templates/tasks.html
+++ b/src/main/resources/templates/tasks.html
@@ -6,25 +6,29 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <h1>To do List</h1>
-    <div>
-        <form action="/" method="post">
-            <div>
-                <input type="text" name="title" placeholder="Add a new task.." required/>
+    <div class="container">
+        <h1 class="mt-5 text-center">To do List</h1>
+        <form action="/" method="post" class="row mt-3">
+            <div class="col-md-10">
+                <input class="form-control form-control-lg" type="text" name="title" placeholder="Add a new task.." required/>
             </div>
-            <div>
-                <input type="text" name="description" placeholder="Add description.." required/>
+            <div class="col-md-10">
+                <input class="form-control form-control-lg" type="text" name="description" placeholder="Add description.." required/>
             </div>
-            <div>
-                <button type="submit">Add</button>
+            <div class="col-md-2">
+                <button class="btn btn-primary btn-lg btn-block" type="submit">Add</button>
             </div>
         </form>
 
-        <th:block th:each="task : ${tasks}">
-            <div>
-                <span th:text="${task.title}"></span>
-            </div>
-        </th:block>
+        <div class="mt-4">
+            <th:block th:each="task : ${tasks}">
+                <div class="card mb-2">
+                    <div class="card-body d-flex justify-content-between align-items-center">
+                        <span th:text="${task.title}"></span>
+                    </div>
+                </div>
+            </th:block>
+        </div>
     </div>
 </body>
 </html>
