--- a/src/main/resources/templates/tasks.html
+++ b/src/main/resources/templates/tasks.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <title>Todo List</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        .text-strikethrough{
+            text-decoration: line-through;
+            color: grey;
+
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -24,7 +31,11 @@
             <th:block th:each="task : ${tasks}">
                 <div class="card mb-2">
                     <div class="card-body d-flex justify-content-between align-items-center">
-                        <span th:text="${task.title}"></span>
+                        <span th:classappend="${task.completed} ? 'text-strikethrough'" th:text="${task.title}"></span>
+                        <div>
+                            <a th:href="@{/{id}/toggle(id=${task.id})}" class="btn btn-outline-secondary btn-sm">Toggle</a>
+                            <a th:href="@{/{id}/delete(id=${task.id})}" class="btn btn-outline-danger btn-sm ml-2">Delete</a>
+                        </div>
                     </div>
                 </div>
             </th:block>
